--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.1"
     defaultConfig {
-        applicationId "com.cita.myapplication"
+        applicationId "com.cita.myapplicationadmin"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
@@ -37,6 +37,8 @@ dependencies {
     implementation 'com.mikhaellopez:circularimageview:3.2.0'
     implementation 'com.android.support:appcompat-v7:29.+'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
